# Book_Web_Service

./: Dockerfile  README.md  Test_problem.docx  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  linters.yml  run-linters.yml
docs/diagrams/: er_diagram.drawio
environment/: local.env
kubernetes/: apply.sh
kubernetes/deployments/: app-deployment.yaml  db-deployment.yaml  minio-deployment.yaml
kubernetes/services/: app-service.yaml  db-service.yaml  minio-service.yaml
src/: alembic.ini  manage.py
src/alembic_migrations/: env.py  migrator.py
src/alembic_migrations/versions/: 28c3e120d358_initial.py  620153641067_initial.py  6fe44fe6e5ca_initial_migration.py  e1f77ba5819b_initial.py
src/app/: create_app.py  routes.py
src/app/db/: crud.py  models.py
src/app/handlers/: models.py
src/app/handlers/base/: base_prototype.py
src/app/handlers/book_files/: book_files.py
src/app/handlers/books/: books.py
src/app/handlers/default/: methods.py
src/app/middlewares/: error.py
src/app/s3/: s3_client.py
src/app/s3_storage/: s3_client.py
src/app/settings/: app.py  base.py  db.py  s3.py
tests/: conftest.py
tests/database_tests/: conftest.py  test_crud.py
tests/handlers/integration_tests/: test_book_and_db_integration.py  test_book_files.py
tests/integration_tests/: test_book.py  test_book_files.py
tests/integration_tests/api_tests/: test_book.py
tests/integration_tests/api_tests/test_data/: test_book.txt
tests/integration_tests/database_tests/: conftest.py  test_crud.py
