[tool.poetry]
name = "starlab test problem"
version = "0.0.1"
description = ""
authors = ["d.vernadskii@gmail.com"]


[tool.poetry.dependencies]
python = "^3.10.7"
aiohttp = "3.8.3"
aiohttp_pydantic = "^2.0.0"
environs = "9.5.0"
marshmallow = "3.19.0"
click = "8.1.7"
ujson = "5.8.0"

sentry-sdk = "1.15.0"
sqlalchemy = {extras = ["asyncpg", "postgresql"], version = "^2.0.22"}
sqlalchemy-utils = "^0.41.1"
aiohttp-pydantic = "^2.0.0"
aiohttp-swagger = "^1.0.16"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.28.0"
coverage = "^7.2.7"
flake8-annotations = "^3.0.1"
flake8-datetime-import = "^0.1.0"
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.7"
flake8-print = "^5.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pytest = "7.3.1"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "0.20.3"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
types-requests = "^2.31.0.2"
types-sqlalchemy-utils = "^1.0.1"
types-ujson = "^5.8.0.1"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
